--- a/model/build.gradle
+++ b/model/build.gradle
@@ -1,2 +1,7 @@
 version '1.0-SNAPSHOT'
 
+version = '0.0.1-SNAPSHOT'
+
+dependencies {
+    compile('org.springframework.boot:spring-boot-starter-data-mongodb-reactive')
+}
