--- a/service/build.gradle
+++ b/service/build.gradle
@@ -1,6 +1,13 @@
 version = '0.0.1-SNAPSHOT'
 
+apply plugin: "groovy"
+
 dependencies {
     compile project(':repository')
+
+    testCompile "org.codehaus.groovy:groovy-all:2.4.13"
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4'
+    testCompile group: 'org.spockframework', name: 'spock-spring', version: '1.1-groovy-2.4'
+
 }
