Added base project structure.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,5 @@
-springBootVersion=2.0.0.RELEASE
+springBootVersion=2.0.1.RELEASE
+h2Version=1.4.197
+swaggerVersion=2.8.0
+hibernateVersion=5.2.16.Final
+dozerVersion=6.2.0
