--- a/model/build.gradle
+++ b/model/build.gradle
@@ -1,7 +1,7 @@
-version '1.0-SNAPSHOT'
-
 version = '0.0.1-SNAPSHOT'
 
 dependencies {
-    compile('org.springframework.boot:spring-boot-starter-data-mongodb-reactive')
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: springBootVersion
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: springBootVersion
+    compile group: 'org.hibernate', name: 'hibernate-entitymanager', version: hibernateVersion
 }
