--- a/rest/build.gradle
+++ b/rest/build.gradle
@@ -1,11 +1,21 @@
+apply plugin: 'org.springframework.boot'
+
 version = '0.0.1-SNAPSHOT'
 
 dependencies {
     compile project(':repository')
     compile project(':service')
+    compile project(':model')
 
-    compile('org.springframework.boot:spring-boot-starter-data-mongodb-reactive')
-    compile('org.springframework.boot:spring-boot-starter-webflux')
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: springBootVersion
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: springBootVersion
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: springBootVersion
+    compile group: 'org.springframework.boot', name: 'spring-boot-devtools', version: springBootVersion
+
+    compile group: 'io.springfox', name: 'springfox-swagger2', version: swaggerVersion
+    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: swaggerVersion
+
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.11'
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
