--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,6 @@ h2Version=1.4.197
 swaggerVersion=2.8.0
 hibernateVersion=5.2.16.Final
 dozerVersion=6.2.0
+mySqlConnectorVersion=8.0.11
+javaXB=2.3.0
+lombokVersion=1.16.20
