Added registration end point

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,5 @@ dozerVersion=6.2.0
 mySqlConnectorVersion=8.0.11
 javaXB=2.3.0
 lombokVersion=1.16.20
+spockVersion=1.1-groovy-2.4
+groovyVersion=2.4.13
