--- a/rest/src/main/resources/application.yaml
+++ b/rest/src/main/resources/application.yaml
@@ -11,9 +11,10 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://192.168.5.40:3306/shop
+    url: jdbc:mysql://phoenix-database:3306/shop
     username: dev
     password: s3cure
+    driver-class-name: com.mysql.jdbc.Driver
   jpa:
     properties:
       hibernate:
