--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,28 @@
 version: '3'
 services:
-  phoenix-service-api:
-    image: "bsgfb/phoenix-api"
-    ports:
-      - 8081:8081
-    depends_on:
-          - "phoenix-database"
   phoenix-database:
     image: "bsgfb/phoenix-database"
     expose:
       - 3306
+    ports:
+      - 3306:3306
+#  phoenix-service-api:
+#    image: "bsgfb/phoenix-api"
+#    ports:
+#      - 8081:8081
+#    depends_on:
+#          - "phoenix-database"
   phoenix-hosting:
     image: "bsgfb/phoenix-hosting"
     expose:
       - 3306
     ports:
       - 5000:5000
+  phoenix-service-categories-classification:
+    image: "bsgfb/phoenix-service-categories-classification"
+    expose:
+      - 5001
+    ports:
+      - 5001:5001
+    environment:
+      - MODEL_NAME=26_5_2018__15_24
