--- a/rest/src/main/resources/application.yaml
+++ b/rest/src/main/resources/application.yaml
@@ -11,7 +11,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/shop
+    url: jdbc:mysql://phoenix-database:3306/shop
     username: dev
     password: s3cure
     driver-class-name: com.mysql.jdbc.Driver
